--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.banner { 
+  background-image: linear-gradient(180deg, rgba(0,0,0,0.7), rgba(0,0,0,0.8)), url('/crypto.jpeg'); 
+  background-size: cover; 
+  background-position: center;
+} 
+
+.address {
+  overflow-wrap: break-word;
+}
